@@ -1,3 +1,8 @@
+Wed Aug 20 14:31:03 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* pager.c (netfs_get_filemap): If pager_create fails, return
+	error to caller.
+
 Wed Aug  6 15:23:03 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* ops.c (netfs_attempt_unlink): Purge cache-held references
